<resources>
    <string name="app_name">ChatApp</string>
    <string name="sign_out">Sign out</string>
    <string name="send_button">Send</string>
    <string name="Help">help</string>

    <string name="image">Image</string>
    <string name="admin_information">Admin information: Name: Mohamed       Email:mheshama700@gmail.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="HiMohamed">Hi Mohamed</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="send_image">Choose Image And Send</string>
    <string name="contact_activity">All Contacts</string>
    <string name="contacts">Contacts</string>
    <string name="user_photo">UserPhoto</string>
</resources>
