<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.moo.chatapp.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/help_id"
        android:theme="@style/AppTheme"
        >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tool_help"
            >
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>




    <LinearLayout
        android:id="@+id/main_help_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/widget_header_padding"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:onClick="click"
            />

        <TextView
            android:id="@+id/information"
            android:text="@string/HiMohamed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="3"
            android:padding="4dp"
            android:text="@string/admin_information"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />



    </LinearLayout>



</LinearLayout>
