<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moo.chatapp.MainActivity">







    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_toLeftOf="@+id/adView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/user_photo" />

    <ListView
        android:layout_below="@id/iv_photo"
        android:id="@+id/lv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:stackFromBottom="true"
        android:padding="@dimen/list_padding"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/message_layout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_padding"
        android:paddingRight="@dimen/list_padding"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/list_padding"
        android:paddingStart="@dimen/list_padding">

        <ImageButton
            android:id="@+id/ib_photo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/send_button"

            android:background="@android:drawable/ic_menu_gallery" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:id="@+id/b_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:text="@string/send_button"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
